--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       - run: docker build . --file Dockerfile --tag $IMAGE_NAME
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_PASSWORD }}
       - run: |
-        IMAGE_ID=uupu/$IMAGE_NAME
+        # IMAGE_ID=uupu/$IMAGE_NAME
         # 转换大写为小写
         # IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-        docker tag $IMAGE_NAME $IMAGE_ID:latest
+        docker tag $IMAGE_NAME uupu/$IMAGE_ID:latest
         docker push $IMAGE_ID:latest
