--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,8 @@ jobs:
       # 构建镜像，指定镜像名
       - run: docker build . --file Dockerfile --tag $IMAGE_NAME
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_PASSWORD }}
-      - run: |
+      - run: docker tag $IMAGE_NAME uupu/$IMAGE_NAME
         # IMAGE_ID=uupu/$IMAGE_NAME
         # 转换大写为小写
-        # IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-        docker tag $IMAGE_NAME:latest uupu/$IMAGE_NAME:latest
-        docker push uupu/$IMAGE_NAME:latest
+        # IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]'
+      - run: docker push uupu/$IMAGE_NAME
