--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - run: mvn package -U -Dcodegen.skip -Dmaven.test.skip=true
       - run : mv $APP_JAR_DIR app.jar
 #      # 构建镜像，指定镜像名
-      - run: docker build . --file Dockerfile -tag $IMAGE_NAME
+      - run: docker build -f Dockerfile -t $IMAGE_NAME
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_PASSWORD }}
       - run: docker tag $IMAGE_NAME uupu/$IMAGE_NAME
         # IMAGE_ID=uupu/$IMAGE_NAME
