--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
           name: ${{ secrets.DOCKER_USERNAME }}/qianguangfu
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tag_with_ref: true
+          tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
