--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Jave8 CI with Maven3
+name: Jave8 CI with Actions
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   APP_JAR_DIR: target/actions-0.0.1-SNAPSHOT.jar
 
 jobs:
-  job1-build:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -19,11 +19,13 @@ jobs:
           java-version: 1.8
       - run: mvn package -U -Dcodegen.skip -Dmaven.test.skip=true
       - run : mv $APP_JAR_DIR app.jar
-#      # 构建镜像，指定镜像名
       - run: docker build -f Dockerfile -t $IMAGE_NAME .
+  push:
+    runs-on: ubuntu-latest
+    steps:
       - uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: ${{ secrets.DOCKER_USERNAME }}/qianguangfu
+          name: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
