--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -23,6 +23,7 @@ jobs:
   push:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - uses: elgohr/Publish-Docker-Github-Action@master
         with:
           name: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REGISTRY }}
