--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=5989
-spring.application.name=${applicationName:actions-bs}
+spring.application.name=actions-bs
 server.servlet.context-path=/actions
