--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -1,4 +1,4 @@
-name: Jave8 CI with Actions
+name: Jave8 CICD with Actions
 
 on:
   push:
@@ -7,10 +7,17 @@ on:
 
 env:
   IMAGE_NAME: actions
+  PROJECT_DIR: actions-server
   APP_JAR_DIR: target/actions-0.0.1-SNAPSHOT.jar
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "测试成功"
+
   compile-build:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -27,3 +34,18 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: matheusvanzan/sshpass-action@v2
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          user: ${{ secrets.SERVER_USER }}
+          pass: ${{ secrets.SERVER_PASS }}
+          run: |-
+            - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
+            - sshpass -p ${{ secrets.SERVER_PASS }} scp -o StrictHostKeyChecking=no -r deploy.sh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/$PROJECT_DIR/deploy.sh;
+            - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} chmod +X  /$PROJECT_DIR/deploy.sh;
+            - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} sh /$PROJECT_DIR/deploy.sh;
