--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -36,6 +36,7 @@ jobs:
           tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
 
   deploy:
+    needs: compile-build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
