--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -40,10 +40,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: matheusvanzan/sshpass-action@v2
+      - uses: matheusvanzan/sshpass-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
-          prot: 22
+          port: 22
           user: ${{ secrets.SERVER_USER }}
           pass: ${{ secrets.SERVER_PASS }}
           run: |-
