--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -38,16 +38,13 @@ jobs:
   deploy:
     needs: compile-build
     runs-on: ubuntu-latest
+    services:
+      sshpass:
+        image: uupu/sshpass:latest
     steps:
       - uses: actions/checkout@v1
-      - uses: matheusvanzan/sshpass-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          port: 22
-          user: ${{ secrets.SERVER_USER }}
-          pass: ${{ secrets.SERVER_PASS }}
-          run: |-
-            - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
-            - sshpass -p ${{ secrets.SERVER_PASS }} scp -o StrictHostKeyChecking=no -r deploy.sh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/$PROJECT_DIR/deploy.sh;
-            - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} chmod +X  /$PROJECT_DIR/deploy.sh;
-            - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} sh /$PROJECT_DIR/deploy.sh;
+      - run: |-
+          - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
+          - sshpass -p ${{ secrets.SERVER_PASS }} scp -o StrictHostKeyChecking=no -r deploy.sh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/$PROJECT_DIR/deploy.sh;
+          - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} chmod +X  /$PROJECT_DIR/deploy.sh;
+          - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} sh /$PROJECT_DIR/deploy.sh;
