--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -38,12 +38,10 @@ jobs:
   deploy:
     needs: compile-build
     runs-on: ubuntu-latest
-    services:
-      sshpass:
-        image: uupu/sshpass:latest
     steps:
       - uses: actions/checkout@v1
       - run: |-
+          - apt-get install sshpass
           - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
           - sshpass -p ${{ secrets.SERVER_PASS }} scp -o StrictHostKeyChecking=no -r deploy.sh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/$PROJECT_DIR/deploy.sh;
           - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} chmod +X  /$PROJECT_DIR/deploy.sh;
