--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: |-
-          - apt-get install sshpass
+          - apt install sshpass
           - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
           - sshpass -p ${{ secrets.SERVER_PASS }} scp -o StrictHostKeyChecking=no -r deploy.sh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/$PROJECT_DIR/deploy.sh;
           - sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} chmod +X  /$PROJECT_DIR/deploy.sh;
