--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -40,9 +40,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - run: |-
-          apt-get install sshpass
-          sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
-          sshpass -p ${{ secrets.SERVER_PASS }} scp -o StrictHostKeyChecking=no -r deploy.sh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/$PROJECT_DIR/deploy.sh;
-          sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} chmod +X  /$PROJECT_DIR/deploy.sh;
-          sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} sh /$PROJECT_DIR/deploy.sh;
+      - uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_PASS }}
+          port: 22
+          script: |-
+            sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
+            sshpass -p ${{ secrets.SERVER_PASS }} scp -o StrictHostKeyChecking=no -r deploy.sh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/$PROJECT_DIR/deploy.sh;
+            sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} chmod +X  /$PROJECT_DIR/deploy.sh;
+            sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} sh /$PROJECT_DIR/deploy.sh;
