--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_PASS }}
+          password: ${{ secrets.SERVER_PASS }}
           port: 22
           script: |-
             sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
