--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -47,7 +47,4 @@ jobs:
           password: ${{ secrets.SERVER_PASS }}
           port: 22
           script: |-
-            sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} mkdir -p /$PROJECT_DIR;
-            sshpass -p ${{ secrets.SERVER_PASS }} scp -o StrictHostKeyChecking=no -r deploy.sh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/$PROJECT_DIR/deploy.sh;
-            sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} chmod +X  /$PROJECT_DIR/deploy.sh;
-            sshpass -p ${{ secrets.SERVER_PASS }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} sh /$PROJECT_DIR/deploy.sh;
+            mkdir -p /$PROJECT_DIR;
