--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -40,6 +40,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - uses: garygrossgarten/github-action-scp@release
+          with:
+            local: deploy.sh
+            remote: /deploy.sh
+            host: ${{ secrets.SERVER_HOST }}
+            username: ${{ secrets.SERVER_USER }}
+            password: ${{ secrets.SERVER_PASS }}
       - uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -47,4 +54,4 @@ jobs:
           password: ${{ secrets.SERVER_PASS }}
           port: 22
           script: |-
-            mkdir -p /$PROJECT_DIR;
+            mkdir -p /$PROJECT_DIR
