--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: garygrossgarten/github-action-scp@release
         with:
           local: deploy.sh
-          remote: /deploy.sh
+          remote: /$PROJECT_DIR/deploy.sh
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASS }}
@@ -54,4 +54,5 @@ jobs:
           password: ${{ secrets.SERVER_PASS }}
           port: 22
           script: |-
-            mkdir -p /$PROJECT_DIR
+            chmod +x /$PROJECT_DIR/deploy.sh
+            sh /$PROJECT_DIR/deploy.sh
