--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -30,6 +30,7 @@ jobs:
           docker build -f Dockerfile -t $IMAGE_NAME .
       - uses: elgohr/Publish-Docker-Github-Action@master
         with:
+          registry: registry.cn-shanghai.aliyuncs.com
           name: ${{ secrets.ALIYUN_IMAGE_REGISTRY }}/$IMAGE_NAME
           username: ${{ secrets.ALIYUN_IMAGE_USERNAME }}
           password: ${{ secrets.ALIYUN_IMAGE_PASSWORD }}
