--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: elgohr/Publish-Docker-Github-Action@master
         with:
           registry: registry.cn-shanghai.aliyuncs.com
-          name: ${{ secrets.ALIYUN_IMAGE_REGISTRY }}/$IMAGE_NAME
+          name: ${{ secrets.ALIYUN_IMAGE_REGISTRY }}/actions
           username: ${{ secrets.ALIYUN_IMAGE_USERNAME }}
           password: ${{ secrets.ALIYUN_IMAGE_PASSWORD }}
           tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
