--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -37,6 +37,7 @@ jobs:
           username: ${{ secrets.ALIYUN_IMAGE_USERNAME }}
           password: ${{ secrets.ALIYUN_IMAGE_PASSWORD }}
           tags: "${{ env.STATE_RELEASE_VERSION }},latest"
+          tag_names: true
 
   deploy:
     needs: compile-build
