--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -38,7 +38,7 @@ jobs:
           name: ${{ secrets.ALIYUN_IMAGE_REGISTRY }}/IMOGE_NAME
           username: ${{ secrets.ALIYUN_IMAGE_USERNAME }}
           password: ${{ secrets.ALIYUN_IMAGE_PASSWORD }}
-          tags: "latest",${{ env.STATE_RELEASE_VERSION }}
+          tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
 
   deploy:
     needs: compile-build
