--- a/.github/workflows/action-ci.yml
+++ b/.github/workflows/action-ci.yml
@@ -35,7 +35,7 @@ jobs:
           IMOGE_NAME: $IMAGE_NAME
         with:
           registry: registry.cn-shanghai.aliyuncs.com
-          name: ${{ secrets.ALIYUN_IMAGE_REGISTRY }}/IMOGE_NAME
+          name: ${{ secrets.ALIYUN_IMAGE_REGISTRY }}/$IMOGE_NAME
           username: ${{ secrets.ALIYUN_IMAGE_USERNAME }}
           password: ${{ secrets.ALIYUN_IMAGE_PASSWORD }}
           tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
