--- a/.github/workflows/action-ci-prod.yml
+++ b/.github/workflows/action-ci-prod.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: garygrossgarten/github-action-scp@release
         with:
-          local: deploy-prod.sh
+          local: docker/deploy-prod.sh
           remote: deploy-prod.sh
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
